--- a/public/html/waiting.html
+++ b/public/html/waiting.html
@@ -1,9 +1,3 @@
 <div class="lobby">
-	<p id="player-1">PLAYER 1</p>
-	<br />
-	<br />
-	<hr />
-	<br />
-	<br />
-	<p id="player-2">PLAYER 2</p>
+	<h1>Waiting for host to start game...</h1>
 </div>
