--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,6 @@
 	<script src="./scripts/load.js"></script>
 	<script src="./scripts/changeBackgroundImage.js"></script>
 	<script src="./scripts/errorHandler.js"></script>
-	<script src="./scripts/populateLobbies.js"></script>
-	<script src="./scripts/createGame.js"></script>
 	<script src="./scripts/joinGame.js"></script>
 	<script src="./scripts/setname.js"></script>
 	<script>
@@ -29,11 +27,9 @@
 		else {
 			changeBackgroundImage("trip-empty.jpg");
 			load("./html/main.html");
-			socket.emit("getLobbies");
-			socket.on("lobbiesList", (lobbies) => {
-				console.log(lobbies);
-				populateLobbies(lobbies);
-			});
 		}
+		socket.on("lobbyClose", () => {
+			location.reload();
+		});
 	</script>
 </html>
