--- a/public/html/host.html
+++ b/public/html/host.html
@@ -2,5 +2,5 @@
 	<h1>TRIP</h1>
 	<h1 id="pin"></h1>
 	<div class="players"></div>
-	<button>START GAME</button>
+	<button onclick="startGame()">START GAME</button>
 </div>
