--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
 	<script src="./scripts/errorHandler.js"></script>
 	<script src="./scripts/joinGame.js"></script>
 	<script src="./scripts/setname.js"></script>
+	<script src="./scripts/gameHandlerClient.js"></script>
+	<script src="./scripts/animate.js"></script>
 	<script>
 		changeBackgroundImage("trip-1.jpg");
 		if (
